# appsecure-juice

./: .env.example  .gitignore  CONTEXT.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  db.py  dependencies.py  main.py  migrations.py
backend/app/domain/: actor_context.py  review_disposition.py  review_run_status.py  review_skill.py  severity.py  skill_run_outcome.py  skill_run_status.py  target.py
backend/app/evidence/: sanitizer.py
backend/app/models/: __init__.py  evidence_packet.py  finding.py  hypothesis.py  review_run.py  review_run_actor.py  skill_run.py
backend/app/reasoning/: factory.py  mock.py  nvidia.py  sanitize.py  types.py
backend/app/routes/: config.py  findings.py  scans.py
backend/app/schemas/: findings.py  hypotheses.py  scans.py  skill_runs.py
backend/app/services/: actors.py  agent_triage.py  cancellation.py  exceptions.py  findings.py  hypotheses.py  review_runs.py  skill_runs.py  zap_scan.py
backend/app/skills/: account_boundary.py  basket_and_checkout.py  basket_boundary.py  basket_manipulation.py  coupon_discount.py  coupon_logic.py  juice_shop_coupon.py  review_ownership.py  (+1 more)
backend/tests/: conftest.py  test_account_boundary_skill.py  test_basket_and_checkout_skill.py  test_basket_boundary.py  test_basket_manipulation.py  test_cancellation.py  test_config.py  test_coupon_discount_skill.py  test_evidence_sanitizer.py  test_findings.py  test_health.py  test_migrations.py  test_review_ownership_skill.py  test_scans.py  test_triage.py  test_zap_normalizer.py  test_zap_scan_flow.py
(+37 files in other folders)
